# MLOps-Template

./: .gitignore  Dockerfile  README.md  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: config.py
scripts/: 00_get_data.py  01_process_data.py  02_train_model.py  03_evaluate_model.py
src/app/: main.py
src/data/: make_dataset.py  process_data.py
src/models/: predict_model.py  train_model.py
tests/: test_data.py  test_pipeline.py
