[tool.poetry]
name = "ml-infra-template"
packages = [{include = "src"}]
version = "0.1.0"
description = "A template for MLOps projects."
authors = ["Revy Pramana <revy.pramana@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
scikit-learn = "^1.4.0"
matplotlib = "^3.8.0"
dvc = {extras = ["s3"], version = "^3.0.0"}
mlflow = "^2.5.0"
seaborn = "^0.13.2"
flake8 = "^7.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
great-expectations = "^0.18.0"
uvicorn = {extras = ["standard"], version = "^0.35.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]